@@ -9,7 +9,7 @@ plugins {
   id 'org.owasp.dependencycheck' version '12.2.0'
   id 'com.github.ben-manes.versions' version '0.48.0'
   id 'org.sonarqube' version '5.1.0.4882'
-  id 'info.solidsoft.pitest' version '1.15.0'
+  id 'info.solidsoft.pitest' version '1.19.0'
   id 'io.freefair.lombok' version '8.10.2'
   // If Pact version is changed, make sure serenity report works.
   id 'au.com.dius.pact' version '4.6.17'
@@ -166,12 +166,19 @@ jacocoTestReport {
 }
 
 pitest {
-  junit5PluginVersion = '1.2.1'
+  pitestVersion = '1.25.7'
+  junit5PluginVersion = '1.2.3'
+  testSourceSets = [sourceSets.test]
   targetClasses = ['uk.gov.hmcts.reform.wataskmanagementapi.*']
   excludedClasses = [
     'uk.gov.hmcts.reform.wataskmanagementapi.taskconfiguration.config.*',
     'uk.gov.hmcts.reform.wataskmanagementapi.config.*',
     'uk.gov.hmcts.reform.wataskmanagementapi.Application'
+  ]
+  jvmArgs = [
+    '-Xmx2048m',
+    '--add-opens=java.base/java.lang=ALL-UNNAMED',
+    '-XX:+EnableDynamicAgentLoading'
   ]
   threads = 10
   outputFormats = ['XML', 'HTML']
@@ -307,8 +314,7 @@ def versions = [
   reformLogging : '8.0.0',
   springDoc     : '2.2.0',
   serenity      : '3.9.8',
-  gradlePitest  : '1.15.0',
-  pitest        : '1.16.3',
+  pitest        : '1.25.7',
   sonarPitest   : '0.5',
   pactVersion   : '4.6.17',
   logbook       : '3.9.0',
@@ -450,7 +456,6 @@ dependencies {
   testImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
 
   testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
-  testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
   testImplementation group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: versions.sonarPitest
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
